# DailyPoetry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  agents.md  daily-poetry-design-doc.md  gutenberg.md  ingestion-design-doc.md  instructions.md  plan.md  worklog.md
.github/workflows/: api-pytests.yml
daily-poetry-android/: README.md  settings.gradle.kts
daily-poetry-android/app/: build.gradle.kts
daily-poetry-api/: README.md  pyproject.toml
daily-poetry-api/app/: __init__.py  auth.py  config.py  database.py  editorial_cli.py  init_db.py  main.py  migrate.py  models.py  notifications.py  notifications_cli.py  schemas.py  seed_from_artifacts.py  service.py
daily-poetry-api/migrations/: 001_init.sql  002_editorial_status.sql  003_notifications.sql
daily-poetry-api/tests/: test_api.py  test_editorial_cli.py  test_notifications.py  test_seed.py
daily-poetry-app/: README.md  index.html  package-lock.json  package.json
daily-poetry-app/public/: manifest.webmanifest  sw.js
daily-poetry-app/src/: App.tsx  main.tsx  styles.css
daily-poetry-app/src/components/: FavouritesView.tsx  TodayView.tsx
daily-poetry-app/src/hooks/: useFavourites.ts  useNotifications.ts
daily-poetry-app/src/lib/: api.ts  constants.ts  date.ts  mockData.ts  (+2 more)
daily-poetry-ingest/: README.md  pyproject.toml
daily-poetry-ingest/src/daily_poetry_ingest/: __init__.py  author_images.py  cli.py  dedupe.py  gutenberg.py  normalize.py  pipeline.py
daily-poetry-ingest/tests/: test_author_images.py  test_dedupe.py  test_gutenberg.py  test_normalize.py  test_pipeline_gutenberg.py
(+21 files in other folders)
