[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-poetry-ingest"
version = "0.1.0"
description = "PoetryDB ingestion tool for Daily Poetry"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Daily Poetry"}]
dependencies = []

[project.scripts]
daily-poetry-ingest = "daily_poetry_ingest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
